test/compile-fail/resolution/pub/in-self/expected.txt
error: `self` is not an ancestor of this scope
 --> top.rhdl:1:7
  |
1 | pub(in self::b) struct a {}
  |        ^^^^ not an ancestor
